tests-build/tests/fail/macros_invalid_input.stderr
error: the `async` keyword is missing from the function declaration
 --> $DIR/macros_invalid_input.rs:4:1
  |
4 | fn main_is_not_async() {}
  | ^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`
 --> $DIR/macros_invalid_input.rs:6:15
  |
6 | #[tokio::main(foo)]
  |               ^^^

error: Must have specified ident
 --> $DIR/macros_invalid_input.rs:9:15
  |
9 | #[tokio::main(threadpool::bar)]
  |               ^^^^^^^^^^^^^^^

error: the `async` keyword is missing from the function declaration
  --> $DIR/macros_invalid_input.rs:13:1
   |
13 | fn test_is_not_async() {}
   | ^^

error: the test function cannot accept arguments
  --> $DIR/macros_invalid_input.rs:16:27
   |
16 | async fn test_fn_has_args(_x: u8) {}
   |                           ^^^^^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`
  --> $DIR/macros_invalid_input.rs:18:15
   |
18 | #[tokio::test(foo)]
   |               ^^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`
  --> $DIR/macros_invalid_input.rs:21:15
   |
21 | #[tokio::test(foo = 123)]
   |               ^^^^^^^^^

error: Failed to parse value of `flavor` as string.
  --> $DIR/macros_invalid_input.rs:24:24
   |
24 | #[tokio::test(flavor = 123)]
   |                        ^^^

error: No such runtime flavor `foo`. The runtime flavors are `current_thread` and `multi_thread`.
  --> $DIR/macros_invalid_input.rs:27:24
   |
27 | #[tokio::test(flavor = "foo")]
   |                        ^^^^^

error: The `start_paused` option requires the `current_thread` runtime flavor. Use `#[tokio::test(flavor = "current_thread")]`
  --> $DIR/macros_invalid_input.rs:30:55
   |
30 | #[tokio::test(flavor = "multi_thread", start_paused = false)]
   |                                                       ^^^^^

error: Failed to parse value of `worker_threads` as integer.
  --> $DIR/macros_invalid_input.rs:33:57
   |
33 | #[tokio::test(flavor = "multi_thread", worker_threads = "foo")]
   |                                                         ^^^^^

error: The `worker_threads` option requires the `multi_thread` runtime flavor. Use `#[tokio::test(flavor = "multi_thread")]`
  --> $DIR/macros_invalid_input.rs:36:59
   |
36 | #[tokio::test(flavor = "current_thread", worker_threads = 4)]
   |                                                           ^

error: second test attribute is supplied
  --> $DIR/macros_invalid_input.rs:40:1
   |
40 | #[test]
   | ^^^^^^^
